--- a/hammers/git/config.org
+++ b/hammers/git/config.org
@@ -9,260 +9,262 @@
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
-#+BEGIN_SRC conf :tangle "~/.gitconfig"
-  [user]
-	  name = neo
-	  email = sjkyspa@gmail.com
-  [alias]
-	  ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
-	  root = "rev-parse --show-toplevel"
-  [log]
-	  abbrevCommit = true
-  [tag]
-	  # Sort tags as version numbers whenever applicable, so 1.10.2 is AFTER 1.2.0.
-	  sort = version:refname
-  [core]
-	  ignorecase = false
-	  quotepath = false
-	  pager = less -F -X
-	  excludesfile = ~/.gitignore
-	  whitespace = -trailing-space
-  [color]
-	  ui = auto
-	
-  [color "branch"]
-	  current = yellow reverse
-	  local = yellow
-	  remote = green
-  [color "diff"]
-	  meta = yellow bold
-	  frag = magenta bold
-	  old = red bold
-	  new = green bold
-  [color "status"]
-	  added = green
-	  changed = red
-	  untracked = cyan
-	
-  [pull]
-	  rebase = true
-  [push]
-	  default = simple
-  [github]
-	  user = sjkyspa@gmail.com
-  [credential]
-	  helper = store
-#+END_SRC
+*** git 基本配置
+    #+BEGIN_SRC conf :tangle (or (and (file-exists-p "~/.gitconfig") 'no) "~/.gitconfig")
+      [user]
+	      name = neo
+	      email = rising.lambda@gmail.com
+      [alias]
+	      ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+	      root = "rev-parse --show-toplevel"
+      [log]
+	      abbrevCommit = true
+      [tag]
+	      # Sort tags as version numbers whenever applicable, so 1.10.2 is AFTER 1.2.0.
+	      sort = version:refname
+      [core]
+	      ignorecase = false
+	      quotepath = false
+	      pager = less -F -X
+	      excludesfile = ~/.gitignore
+	      whitespace = -trailing-space
+      [color]
+	      ui = auto
 
-#+BEGIN_SRC conf :tangle "~/.gitignore"
-  ### Clangd ###
-  # -*- mode: gitignore; -*-
-  .clangd
-  source/_posts/**/*.png
-  source/_drafts/**/*.png
+      [color "branch"]
+	      current = yellow reverse
+	      local = yellow
+	      remote = green
+      [color "diff"]
+	      meta = yellow bold
+	      frag = magenta bold
+	      old = red bold
+	      new = green bold
+      [color "status"]
+	      added = green
+	      changed = red
+	      untracked = cyan
 
+      [pull]
+	      rebase = true
+      [push]
+	      default = simple
+      [github]
+	      user = sjkyspa@gmail.com
+      [credential]
+	      helper = store
+    #+END_SRC
 
-  ### Emacs ###
-  # -*- mode: gitignore; -*-
-  ,*~
-  \#*\#
-  /.emacs.desktop
-  /.emacs.desktop.lock
-  ,*.elc
-  auto-save-list
-  tramp
-  .\#*
-
-  # Org-mode
-  .org-id-locations
-  ,*_archive
-
-  # flymake-mode
-  ,*_flymake.*
-
-  # eshell files
-  /eshell/history
-  /eshell/lastdir
-
-  # elpa packages
-  /elpa/
-
-  # reftex files
-  ,*.rel
-
-  # AUCTeX auto folder
-  /auto/
-
-  # cask packages
-  .cask/
-  dist/
-
-  # Flycheck
-  flycheck_*.el
-
-  # server auth directory
-  /server/
-
-  # projectiles files
-  .projectile
-
-  # directory configuration
-  .dir-locals.el
-
-  # network security
-  /network-security.data
+*** git ignore 基本配置
+    #+BEGIN_SRC conf :tangle (or (and (file-exists-p "~/.gitignore") 'no) "~/.gitignore")
+      ### Clangd ###
+      # -*- mode: gitignore; -*-
+      .clangd
+      source/_posts/**/*.png
+      source/_drafts/**/*.png
 
 
-  # End of https://www.gitignore.io/api/emacs
+      ### Emacs ###
+      # -*- mode: gitignore; -*-
+      ,*~
+      \#*\#
+      /.emacs.desktop
+      /.emacs.desktop.lock
+      ,*.elc
+      auto-save-list
+      tramp
+      .\#*
 
-  # Created by https://www.gitignore.io/api/vim
-  # Edit at https://www.gitignore.io/?templates=vim
+      # Org-mode
+      .org-id-locations
+      ,*_archive
 
-  ### Vim ###
-  # Swap
-  [._]*.s[a-v][a-z]
-  [._]*.sw[a-p]
-  [._]s[a-rt-v][a-z]
-  [._]ss[a-gi-z]
-  [._]sw[a-p]
+      # flymake-mode
+      ,*_flymake.*
 
-  # Session
-  Session.vim
+      # eshell files
+      /eshell/history
+      /eshell/lastdir
 
-  # Temporary
-  .netrwhist
-  ,*~
-  # Auto-generated tag files
-  tags
-  # Persistent undo
-  [._]*.un~
+      # elpa packages
+      /elpa/
 
-  # End of https://www.gitignore.io/api/vim
+      # reftex files
+      ,*.rel
 
-  # Created by https://www.gitignore.io/api/cmake
-  # Edit at https://www.gitignore.io/?templates=cmake
+      # AUCTeX auto folder
+      /auto/
+
+      # cask packages
+      .cask/
+      dist/
+
+      # Flycheck
+      flycheck_*.el
+
+      # server auth directory
+      /server/
+
+      # projectiles files
+      .projectile
+
+      # directory configuration
+      .dir-locals.el
+
+      # network security
+      /network-security.data
 
 
-  # Created by https://www.gitignore.io/api/intellij+all
-  # Edit at https://www.gitignore.io/?templates=intellij+all
+      # End of https://www.gitignore.io/api/emacs
 
-  ### Intellij+all ###
-  # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-  # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+      # Created by https://www.gitignore.io/api/vim
+      # Edit at https://www.gitignore.io/?templates=vim
 
-  # User-specific stuff
-  .idea/**/workspace.xml
-  .idea/**/tasks.xml
-  .idea/**/usage.statistics.xml
-  .idea/**/dictionaries
-  .idea/**/shelf
+      ### Vim ###
+      # Swap
+      [._]*.s[a-v][a-z]
+      [._]*.sw[a-p]
+      [._]s[a-rt-v][a-z]
+      [._]ss[a-gi-z]
+      [._]sw[a-p]
 
-  # Generated files
-  .idea/**/contentModel.xml
+      # Session
+      Session.vim
 
-  # Sensitive or high-churn files
-  .idea/**/dataSources/
-  .idea/**/dataSources.ids
-  .idea/**/dataSources.local.xml
-  .idea/**/sqlDataSources.xml
-  .idea/**/dynamic.xml
-  .idea/**/uiDesigner.xml
-  .idea/**/dbnavigator.xml
+      # Temporary
+      .netrwhist
+      ,*~
+      # Auto-generated tag files
+      tags
+      # Persistent undo
+      [._]*.un~
 
-  # Gradle
-  .idea/**/gradle.xml
-  .idea/**/libraries
+      # End of https://www.gitignore.io/api/vim
 
-  # Gradle and Maven with auto-import
-  # When using Gradle or Maven with auto-import, you should exclude module files,
-  # since they will be recreated, and may cause churn.  Uncomment if using
-  # auto-import.
-  # .idea/modules.xml
-  # .idea/*.iml
-  # .idea/modules
-  # *.iml
-  # *.ipr
+      # Created by https://www.gitignore.io/api/cmake
+      # Edit at https://www.gitignore.io/?templates=cmake
 
-  # CMake
-  cmake-build-*/
 
-  # Mongo Explorer plugin
-  .idea/**/mongoSettings.xml
+      # Created by https://www.gitignore.io/api/intellij+all
+      # Edit at https://www.gitignore.io/?templates=intellij+all
 
-  # File-based project format
-  ,*.iws
+      ### Intellij+all ###
+      # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+      # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-  # IntelliJ
-  out/
+      # User-specific stuff
+      .idea/**/workspace.xml
+      .idea/**/tasks.xml
+      .idea/**/usage.statistics.xml
+      .idea/**/dictionaries
+      .idea/**/shelf
 
-  # mpeltonen/sbt-idea plugin
-  .idea_modules/
+      # Generated files
+      .idea/**/contentModel.xml
 
-  # JIRA plugin
-  atlassian-ide-plugin.xml
+      # Sensitive or high-churn files
+      .idea/**/dataSources/
+      .idea/**/dataSources.ids
+      .idea/**/dataSources.local.xml
+      .idea/**/sqlDataSources.xml
+      .idea/**/dynamic.xml
+      .idea/**/uiDesigner.xml
+      .idea/**/dbnavigator.xml
 
-  # Cursive Clojure plugin
-  .idea/replstate.xml
+      # Gradle
+      .idea/**/gradle.xml
+      .idea/**/libraries
 
-  # Crashlytics plugin (for Android Studio and IntelliJ)
-  com_crashlytics_export_strings.xml
-  crashlytics.properties
-  crashlytics-build.properties
-  fabric.properties
+      # Gradle and Maven with auto-import
+      # When using Gradle or Maven with auto-import, you should exclude module files,
+      # since they will be recreated, and may cause churn.  Uncomment if using
+      # auto-import.
+      # .idea/modules.xml
+      # .idea/*.iml
+      # .idea/modules
+      # *.iml
+      # *.ipr
 
-  # Editor-based Rest Client
-  .idea/httpRequests
+      # CMake
+      cmake-build-*/
 
-  # Android studio 3.1+ serialized cache file
-  .idea/caches/build_file_checksums.ser
+      # Mongo Explorer plugin
+      .idea/**/mongoSettings.xml
 
-  ### Intellij+all Patch ###
-  # Ignores the whole .idea folder and all .iml files
-  # See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
-  .idea/
+      # File-based project format
+      ,*.iws
 
-  # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+      # IntelliJ
+      out/
 
-  ,*.iml
-  modules.xml
-  .idea/misc.xml
-  ,*.ipr
+      # mpeltonen/sbt-idea plugin
+      .idea_modules/
 
-  # Sonarlint plugin
-  .idea/sonarlint
+      # JIRA plugin
+      atlassian-ide-plugin.xml
 
-  # End of https://www.gitignore.io/api/intellij+all
+      # Cursive Clojure plugin
+      .idea/replstate.xml
 
-  # Created by https://www.gitignore.io/api/macos
-  # Edit at https://www.gitignore.io/?templates=macos
+      # Crashlytics plugin (for Android Studio and IntelliJ)
+      com_crashlytics_export_strings.xml
+      crashlytics.properties
+      crashlytics-build.properties
+      fabric.properties
 
-  ### macOS ###
-  # General
-  .DS_Store
-  .AppleDouble
-  .LSOverride
+      # Editor-based Rest Client
+      .idea/httpRequests
 
-  # Icon must end with two \r
-  Icon
+      # Android studio 3.1+ serialized cache file
+      .idea/caches/build_file_checksums.ser
 
-  # Thumbnails
-  ._*
+      ### Intellij+all Patch ###
+      # Ignores the whole .idea folder and all .iml files
+      # See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
+      .idea/
 
-  # Files that might appear in the root of a volume
-  .DocumentRevisions-V100
-  .fseventsd
-  .Spotlight-V100
-  .TemporaryItems
-  .Trashes
-  .VolumeIcon.icns
-  .com.apple.timemachine.donotpresent
+      # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
-  # Directories potentially created on remote AFP share
-  .AppleDB
-  .AppleDesktop
-  Network Trash Folder
-  Temporary Items
-  .apdisk
+      ,*.iml
+      modules.xml
+      .idea/misc.xml
+      ,*.ipr
 
-  # End of https://www.gitignore.io/api/macos
-#+END_SRC
+      # Sonarlint plugin
+      .idea/sonarlint
+
+      # End of https://www.gitignore.io/api/intellij+all
+
+      # Created by https://www.gitignore.io/api/macos
+      # Edit at https://www.gitignore.io/?templates=macos
+
+      ### macOS ###
+      # General
+      .DS_Store
+      .AppleDouble
+      .LSOverride
+
+      # Icon must end with two \r
+      Icon
+
+      # Thumbnails
+      ._*
+
+      # Files that might appear in the root of a volume
+      .DocumentRevisions-V100
+      .fseventsd
+      .Spotlight-V100
+      .TemporaryItems
+      .Trashes
+      .VolumeIcon.icns
+      .com.apple.timemachine.donotpresent
+
+      # Directories potentially created on remote AFP share
+      .AppleDB
+      .AppleDesktop
+      Network Trash Folder
+      Temporary Items
+      .apdisk
+
+      # End of https://www.gitignore.io/api/macos
+    #+END_SRC
