feat: remove bind keys zsh and install direnv

--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -96,9 +96,11 @@
       zplug 'zplug/zplug', hook-build:'zplug --self-manage'
 
       zplug "robbyrussell/oh-my-zsh", use:"lib/{clipboard,completion,directories,history,termsupport}.zsh"
-      for plugin in extract common-aliases docker docker-compose git tmux tmuxinator autojump fzf gitignore cp; do
+      plugins=(extract common-aliases docker docker-compose git tmux tmuxinator autojump fzf gitignore fancy-ctrl-z cp alias-finder direnv urltools globalias)
+      for plugin in $plugins; do
 	  zplug "plugins/$plugin", from:oh-my-zsh
       done
+
       zplug themes/robbyrussell, from:oh-my-zsh, use:robbyrussel.zsh-theme, as:theme
 
       #### ZSH MAGIC
@@ -107,73 +109,6 @@
       zplug "zsh-users/zsh-syntax-highlighting", defer:2
       zplug "zsh-users/zsh-history-substring-search", defer:3
       return 0 # in case zplug adds plugs ignore them
-    #+END_SRC
-
-    #+BEGIN_SRC shell :tangle "~/.zsh/post/bindings.zsh" :eval never :exports code
-      if [[ $- == *i* ]]; then
-	  # CTRL-T - Paste the selected file path(s) into the command line
-	  __fsel() {
-	    local cmd="${FZF_CTRL_T_COMMAND:-"command find -L . \\( -path '*/\\.*' -o -fstype 'dev' -o -fstype 'proc' \\) -prune \
-	      -o -type f -print \
-	      -o -type d -print \
-	      -o -type l -print 2> /dev/null | sed 1d | cut -b3-"}"
-	    setopt localoptions pipefail 2> /dev/null
-	    eval "$cmd | $(__fzfcmd) -m $FZF_CTRL_T_OPTS" | while read item; do
-	      echo -n "${(q)item} "
-	    done
-	    local ret=$?
-	    echo
-	    return $ret
-	  }
-
-	  __fzfcmd() {
-	    [ ${FZF_TMUX:-1} -eq 1 ] && echo "fzf-tmux -d${FZF_TMUX_HEIGHT:-40%}" || echo "fzf"
-	  }
-
-	  fzf-file-widget() {
-	    LBUFFER="${LBUFFER}$(__fsel)"
-	    local ret=$?
-	    zle redisplay
-	    typeset -f zle-line-init >/dev/null && zle zle-line-init
-	    return $ret
-	  }
-	  zle     -N   fzf-file-widget
-	  bindkey '^T' fzf-file-widget
-
-	  # ALT-C - cd into the selected directory
-	  fzf-cd-widget() {
-	    local cmd="${FZF_ALT_C_COMMAND:-"command find -L . \\( -path '*/\\.*' -o -fstype 'dev' -o -fstype 'proc' \\) -prune \
-	      -o -type d -print 2> /dev/null | sed 1d | cut -b3-"}"
-	    setopt localoptions pipefail 2> /dev/null
-	    cd "${$(eval "$cmd | $(__fzfcmd) +m $FZF_ALT_C_OPTS"):-.}"
-	    local ret=$?
-	    zle reset-prompt
-	    typeset -f zle-line-init >/dev/null && zle zle-line-init
-	    return $ret
-	  }
-	  zle     -N    fzf-cd-widget
-	  bindkey '\ec' fzf-cd-widget
-
-	  # CTRL-R - Paste the selected command from history into the command line
-	  fzf-history-widget() {
-	    local selected num
-	    setopt localoptions noglobsubst pipefail 2> /dev/null
-	    selected=( $(fc -l 1 | sort -k2 | uniq -f1|sort -k1 | eval "$(__fzfcmd) +s --tac +m -n2..,.. --tiebreak=index --toggle-sort=ctrl-r $FZF_CTRL_R_OPTS -q ${(q)LBUFFER}") )
-	    local ret=$?
-	    if [ -n "$selected" ]; then
-	      num=$selected[1]
-	      if [ -n "$num" ]; then
-		zle vi-fetch-history -n $num
-	      fi
-	    fi
-	    zle redisplay
-	    typeset -f zle-line-init >/dev/null && zle zle-line-init
-	    return $ret
-	  }
-
-	  zle     -N   fzf-history-widget
-	  bindkey '^R' fzf-history-widget
-      fi
     #+END_SRC
 
     #+BEGIN_SRC shell :tangle "~/.zsh/post/loads.zsh" :eval never :exports code
