--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -19,131 +19,132 @@ git remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/home
 
 *** 默认安装的软件包
 #+BEGIN_SRC conf :tangle ~/.Brewfile :exports code :results none :eval never
-cask_args appdir: '/Applications'
-tap 'homebrew/cask' if OS.mac?
-tap 'homebrew/bundle'
+  cask_args appdir: '/Applications'
+  tap 'homebrew/cask' if OS.mac?
+  tap 'homebrew/bundle'
 
-brew "mas" if OS.mac?
-# App Store
-mas "Reeder3", id: 880001334
-mas "ReadKit", id: 588726889
-mas "Hidden Bar", id: 1452453066
-mas "SwordSoft Screenink Free", id: 953841977
+  brew "mas" if OS.mac?
+  # App Store
+  mas "Reeder3", id: 880001334
+  mas "ReadKit", id: 588726889
+  mas "Hidden Bar", id: 1452453066
+  mas "SwordSoft Screenink Free", id: 953841977
 
-# system
-cask 'docker'
-brew 'openjdk'
-cask 'iterm2'
-cask 'squirrel'
-cask 'snipaste'
-cask 'unshaky' # process the mac keyboard duplicate key problem
-# usb network sharing driver
-# cask 'horndis'
-brew 'ruby'
-brew 'boost'
+  # system
+  cask 'docker'
+  brew 'openjdk'
+  cask 'iterm2'
+  cask 'squirrel'
+  cask 'snipaste'
+  cask 'unshaky' # process the mac keyboard duplicate key problem
+  # usb network sharing driver
+  # cask 'horndis'
+  brew 'ruby'
+  brew 'boost'
 
-# ides
-cask 'clion'
-cask 'visual-studio-code'
-
-
-# virtualization
-cask 'parallels' 
-
-# productivity
-cask 'alfred'
-cask 'xmind'
-cask 'hammerspoon'
-cask 'appcleaner'
-cask 'cheatsheet'
-cask 'postman'
-
-# video processing
-cask 'handbrake'  # 视屏压缩
-
-# editor
-cask 'sublime-text'
-cask 'emacs'
-cask 'arduino'
-
-# storage
-cask 'baidunetdisk'
-cask 'baiducloud'
-cask 'yinxiangbiji'
-cask 'dash'
-cask 'thunder'
-cask '1password'
-cask 'nutstore'
-
-# broswer
-cask 'firefox'
-cask 'google-chrome'
-
-# study
-cask 'kindle'
-#cask 'youdaodict'
-
-# entertain
-cask 'neteasemusic'
-cask 'qqmusic'
-cask 'vlc'
-
-# communication
-cask 'qq'
-cask 'wechat'
-cask 'aliwangwang'
-
-# emacs
-cask "mactex-no-gui"
-# terminal apps
-## network
-brew 'inetutils' if OS.mac?
-brew 'coreutils' if Os.mac?
-brew 'nmap'
-brew 'axel' # multiple thread downloader
-brew 'iperf'
-brew 'gradle'
-brew 'make'
-brew 'cmake'
-brew 'tig'
-brew 'rg'
-brew 'jq'
-brew 'autojump'
-brew 'git'
-brew 'hub' # github command line
-brew 'vim'
-brew 'zsh'
-brew 'tldr'
-brew 'zsh-completions'
-brew 'graphviz'
-brew 'tree'
-
-brew 'reattach-to-user-namespace' if OS.mac?
-brew 'tmux'
-brew 'tmuxinator-completion'
-brew 'mycli' if OS.mac?
-# code statictis
-brew 'cloc'
-brew 'golang'
-brew 'maven' if OS.mac?
-brew 'fzf'
-brew 'watch'
-
-# other
-#cask 'logitech-options' 
-
-# design
-cask 'zeplin'
-
-brew 'gcc'
-brew 'llvm', args: ["with-toolchain"]
+  # ides
+  cask 'clion'
+  cask 'visual-studio-code'
 
 
-# ic
-brew 'icarus-verilog'
-cask 'kicad'
-cask 'xquartz'
-cask 'gtkwave'
+  # virtualization
+  cask 'parallels' 
+
+  # productivity
+  cask 'alfred'
+  cask 'xmind'
+  cask 'hammerspoon'
+  cask 'appcleaner'
+  cask 'cheatsheet'
+  cask 'postman'
+
+  # video processing
+  cask 'handbrake'  # 视屏压缩
+
+  # editor
+  cask 'sublime-text'
+  cask 'emacs'
+  cask 'arduino'
+
+  # storage
+  cask 'baidunetdisk'
+  cask 'baiducloud'
+  cask 'yinxiangbiji'
+  cask 'dash'
+  cask 'thunder'
+  cask '1password'
+  cask 'nutstore'
+
+  # broswer
+  cask 'firefox'
+  cask 'google-chrome'
+
+  # study
+  cask 'kindle'
+  #cask 'youdaodict'
+
+  # entertain
+  cask 'neteasemusic'
+  cask 'qqmusic'
+  cask 'vlc'
+
+  # communication
+  cask 'qq'
+  cask 'wechat'
+  cask 'aliwangwang'
+
+  # emacs
+  cask "mactex-no-gui"
+  # terminal apps
+  ## network
+  brew 'inetutils' if OS.mac?
+  brew 'coreutils' if Os.mac?
+  brew 'nmap'
+  brew 'axel' # multiple thread downloader
+  brew 'iperf'
+  brew 'gradle'
+  brew 'make'
+  brew 'cmake'
+  brew 'tig'
+  brew 'rg'
+  brew 'jq'
+  brew 'autojump'
+  brew 'git'
+  brew 'hub' # github command line
+  brew 'vim'
+  brew 'zsh'
+  brew 'tldr'
+  brew 'zsh-completions'
+  brew 'graphviz'
+  brew 'tree'
+  brew 'direnv'
+
+  brew 'reattach-to-user-namespace' if OS.mac?
+  brew 'tmux'
+  brew 'tmuxinator-completion'
+  brew 'mycli' if OS.mac?
+  # code statictis
+  brew 'cloc'
+  brew 'golang'
+  brew 'maven' if OS.mac?
+  brew 'fzf'
+  brew 'watch'
+
+  # other
+  #cask 'logitech-options' 
+
+  # design
+  cask 'zeplin'
+
+  brew 'gcc'
+  brew 'llvm', args: ["with-toolchain"]
+
+
+  # ic
+  brew 'icarus-verilog'
+  cask 'kicad'
+  cask 'xquartz'
+  cask 'gtkwave'
 #+END_SRC
 
 #+BEGIN_SRC shell :tangle no :exports code :results output
