--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -238,8 +238,49 @@ plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
      `(("N" "Notes" tags "NOTE"
 	((org-agenda-overriding-header "Notes")
 	 (org-tags-match-list-sublevels t)))
+       ("a" "Agenda"
+	((agenda "" ((org-agenda-span 1)                      ; daily agenda
+		     (org-deadline-warning-days 0)            ; 7 day advanced warning for deadlines
+		     (org-agenda-scheduled-leaders '("" "Due %2dx: "))
+		     (org-agenda-overriding-header "Today's Schedule:")
+		     (org-agenda-start-day nil)
+		     (org-agenda-start-on-weekday nil)
+		     (org-agenda-compact-blocks t)
+		     (org-agenda-use-time-grid nil)))
+	 (agenda "" ((org-agenda-span 7)                      ;; overview of appointments
+		     (org-agenda-start-on-weekday nil)         ;; calendar begins today
+		     (org-agenda-start-day "+1d")
+		     (org-agenda-show-future-repeats nil)
+		     (org-agenda-entry-types '(:timestamp :sexp :scheduled :deadline))))))
        ("g" "GTD"
-	((agenda "" nil)
+	((agenda "" ((org-agenda-span 1)                      ; daily agenda
+		     (org-deadline-warning-days 0)            ; 7 day advanced warning for deadlines
+		     (org-agenda-scheduled-leaders '("" "Due %2dx: "))
+		     (org-agenda-overriding-header "Today's Schedule:")
+		     (org-agenda-start-day nil)
+		     (org-agenda-start-on-weekday nil)
+		     (org-agenda-compact-blocks t)
+		     (org-agenda-use-time-grid nil)))
+	 (agenda "" (
+		     (org-agenda-tag-filter-preset '("-routine"))
+		     (org-agenda-tag-filter '("-routine"))
+		     (org-agenda-category-filter '("-routine"))
+		     (org-agenda-category-filter-preset '("-routine"))
+		     (org-agenda-skip-function '(lambda () (let ((next-headline (save-excursion (or (outline-next-heading) (point-max))))
+							    (current-headline (or (and (org-at-heading-p)
+										       (point))
+										  (save-excursion (org-back-to-heading)))))
+							(if (and (member "routine" (org-get-tags-at current-headline)) (not (org-get-deadline-time current-headline)))
+							    next-headline
+							  nil)
+							)))
+		     (org-agenda-span 7)                      ;; overview of appointments
+		     (org-agenda-start-on-weekday nil)         ;; calendar begins today
+		     (org-agenda-start-day "+1d")
+		     (org-agenda-show-future-repeats nil)
+		   
+		     (org-agenda-entry-types '(:timestamp :sexp :scheduled :deadline))))
+       
 	 (tags "INBOX"
 	       ((org-agenda-overriding-header "Inbox")
 		(org-agenda-skip-function
@@ -305,10 +346,11 @@ plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
 		     (org-tags-match-list-sublevels nil)
 		     (org-agenda-sorting-strategy
 		      '(category-keep))))
+       
 	 ;; (tags-todo "-NEXT"
 	 ;;            ((org-agenda-overriding-header "All other TODOs")
 	 ;;             (org-match-list-sublevels t)))
-	 ))  )))
+	 )))))
 #+END_SRC
 *** org-mode clock 配置
 #+BEGIN_SRC elisp :eval never :exports code
