--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -35,14 +35,37 @@
    #+HEADER: :var conf.d=(or (and (boundp 'm/conf.d) (file-directory-p m/conf.d) m/conf.d) (expand-file-name user-emacs-directory))
    #+HEADER: :var home.d=(or (and (boundp 'm/home.d) (file-directory-p m/home.d) m/home.d) (expand-file-name "~"))
    #+BEGIN_SRC elisp :eval never :exports code
-  (defconst m/os
-    (let ((os (symbol-name system-type)))
-      (cond ((string= os "darwin") 'macos)
-	    ((string-prefix-p "gnu" os) 'linux)
-	    ((or (string-prefix-p "ms" os) (string-prefix-p "windows" os)) 'windows))))
+     (defconst m/os
+       (let ((os (symbol-name system-type)))
+	 (cond ((string= os "darwin") 'macos)
+	       ((string-prefix-p "gnu" os) 'linux)
+	       ((or (string-prefix-p "ms" os) (string-prefix-p "windows" os)) 'windows))))
 
-  (defvar m/conf.d conf.d)
-  (defvar m/home.d home.d)
+     (defvar m/conf.d conf.d)
+     (defvar m/home.d home.d)
+
+     (defun m/var (name)
+       "Return value of variable or environment identified by NAME."
+       (or (getenv name) (eval (read name))))
+
+     (defun m/resolve (path)
+       "Interpolation variable like ${var} $var in PATH with environment or elisp variables."
+       (if (string-prefix-p "~/" path)
+	   (m/resolve (concat (getenv "HOME") (substring path 1)))
+	 (let ((s (or (string-match "${\\([^ }]*\\)}" path)
+		      (string-match "$\\([A-z_]*\\)" path)))
+	       (e (match-end 0)))
+	   (if (not s)
+	       path
+	     (m/resolve
+	      (concat (substring path 0 s) (m/var (match-string 1 path)) (substring path e)))))))
+
+
+     (defun tangle-if-absent (path)
+       (let* ((filename (m/resolve path)))
+	 (if (file-exists-p filename)
+	     nil
+	   filename)))
    #+END_SRC
 
    #+BEGIN_SRC elisp :eval never :exports code
