--- a/hammers/tmux/tmux.org
+++ b/hammers/tmux/tmux.org
@@ -10,34 +10,45 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 *** tmux 配置
 #+BEGIN_SRC conf :tangle "~/.tmux.conf" :results silent
-# use ctrl-a to as prefix
-set -g prefix C-x
-unbind-key C-b
-# move to the last used window
-bind a last-window
-# emacs 类似快捷键
-set -gw mode-keys emacs
+  # use ctrl-a to as prefix
+  set -g prefix C-x
+  unbind-key C-b
+  # move to the last used window
+  bind a last-window
+  bind | split-window -h
+  bind - split-window -v
+  unbind '"'
+  unbind %
 
-# set color of active pane
-set -g status-keys emacs
-set -g status off
-set -g renumber-windows on
+  # emacs 类似快捷键
+  set -gw mode-keys emacs
 
-set -g @copy_mode_yank "M-w"
-set -g @yank_line "M-w"
-set -g @copy_mode_put "C-y"
-set -g @yank_with_mouse on
-set -g @yank_selection_mouse 'clipboard'
+  # set color of active pane
+  set -g status-keys emacs
+  set -g status off
+  set -g renumber-windows on
+
+  set -g @copy_mode_yank "M-w"
+  set -g @yank_line "M-w"
+  set -g @copy_mode_put "C-y"
+  set -g @yank_with_mouse on
+  set -g @yank_selection_mouse 'clipboard'
 
 
-set -g @plugin 'tmux-plugins/tpm'
-# A set of tmux options that should be acceptable to everyone
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-urlview'
-# copy to system clipboard in tmux
-set -g @plugin 'tmux-plugins/tmux-yank'
-run '~/.tmux/plugins/tpm/tpm'
+
+  set -g @plugin 'tmux-plugins/tpm'
+  # A set of tmux options that should be acceptable to everyone
+  set -g @plugin 'tmux-plugins/tmux-sensible'
+  set -g @plugin 'tmux-plugins/tmux-resurrect'
+  set -g @plugin 'tmux-plugins/tmux-copycat'
+  set -g @plugin 'tmux-plugins/tmux-open'
+  set -g @plugin 'tmux-plugins/tmux-urlview'
+  # copy to system clipboard in tmux
+  set -g @plugin 'tmux-plugins/tmux-yank'
+  run '~/.tmux/plugins/tpm/tpm'
+
+  bind-key -T prefix 1 resize-pane -Z
+  bind-key -T prefix 2 split-window -h 
+  bind-key -T prefix 3 split-window -v 
+  bind-key -T prefix 0 kill-pane
 #+END_SRC
