--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -85,6 +85,7 @@ plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
 			,(expand-file-name "mobile.org" private-directory)
 			,(expand-file-name "routine.org" private-directory)
 			))
+    (org-archive-location (concat (expand-file-name "archive.org" private-directory) "::datetree/* Finished Tasks"))
     (org-support-shift-select t)
 
     ;; Targets start with the file name - allows creating level 1 tasks
@@ -99,7 +100,6 @@ plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
     (org-archive-mark-done nil)
 	  ;;; Agenda views
     (org-agenda-clockreport-parameter-plist '(:link t :maxlevel 3))
-    (org-archive-location "%s_archive::* Archive")
     ;; (org-agenda-current-time-string "------------NOW------------")
     ;; (org-agenda-time-grid
     ;;     '((daily today require-timed)
@@ -243,7 +243,6 @@ plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
 	((agenda "" ((org-agenda-span 1)                      ; daily agenda
 		     (org-deadline-warning-days 0)            ; 7 day advanced warning for deadlines
 		     (org-agenda-scheduled-leaders '("" "Due %2dx: "))
-		     (org-agenda-deadline-leaders '("" "Due in %2dx: "))
 		     (org-agenda-overriding-header "Today's Schedule:")
 		     (org-agenda-start-day nil)
 		     (org-agenda-start-on-weekday nil)
@@ -253,7 +252,6 @@ plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
 		     (org-agenda-start-on-weekday nil)         ;; calendar begins today
 		     (org-agenda-scheduled-leaders '("" "Due %2dx: "))
 		     (org-agenda-deadline-leaders '("" "Due in %2dx: "))
-
 		     (org-agenda-start-day "+1d")
 		     (org-agenda-show-future-repeats nil)
 		     (org-agenda-entry-types '(:timestamp :sexp :scheduled :deadline))))))
@@ -261,25 +259,21 @@ plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
 	((agenda "" ((org-agenda-span 1)                      ; daily agenda
 		     (org-deadline-warning-days 0)            ; 7 day advanced warning for deadlines
 		     (org-agenda-scheduled-leaders '("" "Due %2dx: "))
-		     (org-agenda-deadline-leaders '("" "Due in %2dx: "))
 		     (org-agenda-overriding-header "Today's Schedule:")
 		     (org-agenda-start-day nil)
 		     (org-agenda-start-on-weekday nil)
 		     (org-agenda-compact-blocks t)
 		     (org-agenda-use-time-grid nil)))
-	 (agenda "" (
-		     (org-agenda-scheduled-leaders '("" "Due %2dx: "))
-		     (org-agenda-deadline-leaders '("" "Due in %2dx: "))
+	 (agenda "" ((org-agenda-scheduled-leaders '("" "Due %2dx: "))
 		     (org-agenda-skip-function '(lambda () (let ((next-headline (save-excursion (or (outline-next-heading) (point-max))))
 							    (current-headline (or (and (org-at-heading-p)
 										       (point))
 										  (save-excursion (org-back-to-heading)))))
 							(if (and (member "routine" (org-get-tags-at current-headline)) (not (org-get-deadline-time current-headline)))
 							    next-headline
-							  nil)
-							)))
-		     (org-agenda-span 7)                      ;; overview of appointments
-		     (org-agenda-start-on-weekday nil)         ;; calendar begins today
+							  nil))))
+		     (org-agenda-span 7)
+		     (org-agenda-start-on-weekday nil)
 		     (org-agenda-start-day "+1d")
 		     (org-agenda-show-future-repeats nil)
 		     (org-agenda-entry-types '(:timestamp :sexp :scheduled :deadline))))
