--- a/hammers/tmux/tmux.org
+++ b/hammers/tmux/tmux.org
@@ -35,6 +35,8 @@
   set -g @yank_selection_mouse 'clipboard'
 
 
+  # enable mouse to scoll history
+  set -g mouse on
 
   set -g @plugin 'tmux-plugins/tpm'
   # A set of tmux options that should be acceptable to everyone
