--- a/hammers/tmux/tmux.org
+++ b/hammers/tmux/tmux.org
@@ -9,48 +9,51 @@
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 *** tmux 配置
-#+BEGIN_SRC conf :tangle "~/.tmux.conf" :results silent
-  # use ctrl-a to as prefix
-  set -g prefix C-x
-  unbind-key C-b
-  # move to the last used window
-  bind a last-window
-  bind | split-window -h
-  bind - split-window -v
-  unbind '"'
-  unbind %
+    #+BEGIN_SRC conf :tangle "~/.tmux.conf" :results silent
+      # use ctrl-a to as prefix
+      set -g prefix C-x
+      unbind-key C-b
 
-  # emacs 类似快捷键
-  set -gw mode-keys emacs
+      # emacs 类似快捷键
+      set -gw mode-keys emacs
 
-  # set color of active pane
-  set -g status-keys emacs
-  set -g status off
-  set -g renumber-windows on
+      # set color of active pane
+      set -g status-keys emacs
+      set -g status off
+      set -g pane-border-status top
+      set -g renumber-windows on
 
-  set -g @copy_mode_yank "M-w"
-  set -g @yank_line "M-w"
-  set -g @copy_mode_put "C-y"
-  set -g @yank_with_mouse on
-  set -g @yank_selection_mouse 'clipboard'
+      set -g @copy_mode_yank "M-w"
+      set -g @yank_line "M-w"
+      set -g @copy_mode_put "C-y"
+      set -g @yank_with_mouse on
+      set -g @yank_selection_mouse 'clipboard'
 
 
-  # enable mouse to scoll history
-  set -g mouse on
+      # enable mouse to scoll history
+      set -g mouse on
 
-  set -g @plugin 'tmux-plugins/tpm'
-  # A set of tmux options that should be acceptable to everyone
-  set -g @plugin 'tmux-plugins/tmux-sensible'
-  set -g @plugin 'tmux-plugins/tmux-resurrect'
-  set -g @plugin 'tmux-plugins/tmux-copycat'
-  set -g @plugin 'tmux-plugins/tmux-open'
-  set -g @plugin 'tmux-plugins/tmux-urlview'
-  # copy to system clipboard in tmux
-  set -g @plugin 'tmux-plugins/tmux-yank'
-  run '~/.tmux/plugins/tpm/tpm'
+      set -g @plugin 'tmux-plugins/tpm'
+      set -g @plugin 'tmux-plugins/tmux-sensible'
+      set -g @plugin 'tmux-plugins/tmux-resurrect'
+      set -g @plugin 'tmux-plugins/tmux-copycat'
+      set -g @plugin 'tmux-plugins/tmux-open'
+      set -g @plugin 'tmux-plugins/tmux-urlview'
+      # copy to system clipboard in tmux
+      set -g @plugin 'tmux-plugins/tmux-yank'
+      run '~/.tmux/plugins/tpm/tpm'
 
-  bind-key -T prefix 1 resize-pane -Z
-  bind-key -T prefix 2 split-window -v 
-  bind-key -T prefix 3 split-window -h 
-  bind-key -T prefix 0 kill-pane
-#+END_SRC
+      bind-key -T prefix 1 resize-pane -Z
+      bind-key -T prefix 2 split-window -v 
+      bind-key -T prefix 3 split-window -h 
+      bind-key -T prefix 0 kill-pane
+      # move to the last used window
+      bind a last-window
+      bind | split-window -h
+      bind - split-window -v
+      unbind '"'
+      unbind %
+      bind T run 'zsh -c "arr=( off top ) && tmux setw pane-border-status \${arr[\$(( \${arr[(I)#{pane-border-status}]} % 2 + 1 ))]}"'
+      # rename pane
+      bind t command-prompt -p "(rename-pane)" -I "#T" "select-pane -T '%%'"
+    #+END_SRC
