feat(brew): add yaml query

--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -108,6 +108,7 @@ git remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/home
   brew 'tig'
   brew 'rg'
   brew 'jq'
+  brew 'yq'
   brew 'autojump'
   brew 'git'
   brew 'hub' # github command line
