feat: should include the diary in the agenda

--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -243,6 +243,7 @@
     #+BEGIN_SRC elisp :eval never :exports code
       (use-package org
 	:custom
+	(org-agenda-include-diary t)
 	(org-agenda-custom-commands
 	 `(("N" "Notes" tags "NOTE"
 	    ((org-agenda-overriding-header "Notes")
