--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -76,6 +76,8 @@
 	(org-list-dt ((t (:foreground "#bd93f9"))))
 	(org-document-title ((t (:foreground "#f1fa8c" :weight bold))))
 	(org-footnote ((t (:foreground "#76e0f3"))))
+	;; 当通过 org-previous/next-item 在 plain list 中导航的时候，循环导航 
+	(org-list-use-circular-motion t)
 
 	;; do not scale outline header
 	;; (org-level-1 ((t (:inherit outline-1 :height 1.0))))
@@ -92,7 +94,10 @@
 	 ("C-c {" . sp-wrap-curly)
 	 ("C-c (" . sp-wrap-round)
 	 ("C-c [" . sp-wrap-square)
-	 ("C-c w" . widen))
+	 ("C-c w" . widen)
+	 ("S-<up>" . org-previous-item)
+	 ("S-<down>" . org-next-item)
+	 )
 	:hook
 	(org-mode . (lambda ()
 		      (dolist (key '("C-'" "C-," "C-."))
